fix: fixed z-index calendar modal

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,4 @@
+.items .DateRangePicker_picker__portal {z-index: 9999;}
 /*! CSS Used from: Embedded */
 .gm-control-active>img{box-sizing:content-box;display:none;left:50%;pointer-events:none;position:absolute;top:50%;transform:translate(-50%,-50%);}
 .gm-control-active>img:nth-child(1){display:block;}
